Add drought commodities utilities and update .gitignore; remove NN_prediction module files

--- a/definir_area_cocoa.ipynb
+++ b/definir_area_cocoa.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,13 +137,14 @@
     "lat = data[\"lat\"].values\n",
     "lon = data[\"lon\"].values\n",
     "\n",
-    "\n",
+    "# Invertir el array para que la primera fila corresponda a la latitud superior\n",
     "arr_masked = arr_masked[::-1]\n",
-    "lat = lat[::-1]\n",
     "\n",
-    "# Resolución y transform corregido\n",
+    "# Cálculo de resolución\n",
     "res_lat = abs(lat[1] - lat[0])\n",
     "res_lon = abs(lon[1] - lon[0])\n",
+    "\n",
+    "# Calcular la transformación georreferenciada\n",
     "transform = from_origin(lon.min() - res_lon / 2, lat.max() + res_lat / 2, res_lon, res_lat)\n",
     "\n",
     "# Guardar como GeoTIFF\n",
@@ -162,9 +163,22 @@
     ") as dst:\n",
     "    dst.write(arr_masked, 1)\n",
     "\n",
-    "# Visualizar en Leafmap\n",
-    "m = leafmap.Map(center=[0, 0], zoom=2)\n",
+    "# Calcular la extensión (bounding box) del raster\n",
+    "# La esquina superior izquierda se obtiene directamente de la transformación\n",
+    "x_origin = lon.min() - res_lon / 2\n",
+    "y_origin = lat.max() + res_lat / 2\n",
+    "x_end = x_origin + arr_masked.shape[1] * res_lon\n",
+    "y_end = y_origin - arr_masked.shape[0] * res_lat\n",
+    "bounds = [[y_end, x_origin], [y_origin, x_end]]  # [ [min_lat, min_lon], [max_lat, max_lon] ]\n",
+    "\n",
+    "# Visualizar con Leafmap: centramos el mapa en el centro del raster y ajustamos los límites\n",
+    "center_lat = (y_origin + y_end) / 2\n",
+    "center_lon = (x_origin + x_end) / 2\n",
+    "m = leafmap.Map(center=[center_lat, center_lon], zoom=4, max_zoom=18)\n",
     "m.add_raster(tif_path, layer_name=\"Cocoa Area\")\n",
+    "m.fit_bounds(bounds)\n",
+    "\n",
+    "# Guardar el HTML del mapa\n",
     "m.to_html(\"mapa_cocoa.html\")"
    ]
   },
